--- a/cups/config.json
+++ b/cups/config.json
@@ -13,6 +13,7 @@
     ],
     "init": true,
     "homeassistant_api": true,
+    "usb": "true",
     "ports": {
         "631/tcp": 631,
         "631/udp": 631
