--- a/cups/Dockerfile
+++ b/cups/Dockerfile
@@ -19,13 +19,11 @@ RUN apt-get update \
         printer-driver-foo2zjs \
         gnupg2 \
         lsb-release \
-    && echo "deb http://nginx.org/packages/debian `lsb_release -cs` nginx" \
+    && echo "deb http://nginx.org/packages/ubuntu `lsb_release -cs` nginx" \
         | tee /etc/apt/sources.list.d/nginx.list \
     && curl -fsSL https://nginx.org/keys/nginx_signing.key | apt-key add - \
     && apt-get update \
-    && apt-get install nginx nginx-module-njs \
-    && apt-get clean -y \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get install nginx nginx-module-njs
 
 COPY rootfs /
 RUN ["chmod", "+x", "/run.sh"]
