--- a/cups/config.json
+++ b/cups/config.json
@@ -18,6 +18,9 @@
         "631/tcp": 631,
         "631/udp": 631
     },
+    "host_network":true,
+    "privileged":["SYS_ADMIN"],
+    "full_access":true,
     "ports_description": {
         "631/tcp": "For other devices on the local network to print to this server",
         "631/udp": "For other devices on the local network to print to this server"
