--- a/cups/Dockerfile
+++ b/cups/Dockerfile
@@ -1,5 +1,6 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
+ARG DEBIAN_FRONTEND=noninteractive
 
 LABEL io.hass.version="1" io.hass.type="addon" io.hass.arch="armhf|aarch64|i386|amd64"
 
